simplify pre-annotated training data creation